--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -9,7 +9,7 @@
 </body>
 </html> -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Mi página</title>
@@ -19,6 +19,6 @@
     <p>Haga clic en el siguiente enlace para ver el archivo PDF:</p>
     <a href="{% url 'mostrar_pdf' %}">Ver archivo PDF</a>
 </body>
-</html>
+</html> -->
 
 
